# fastapi-meeting-service

./: .gitignore  README.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 25bb9e9f2f64_auto_generate_migration.py  8b1d64454b96_add_attendance_status_field.py
appserver/: app.py
appserver/apps/account/: deps.py  endpoints.py  exceptions.py  models.py  schemas.py  utils.py
appserver/apps/calendar/: endpoints.py  enums.py  exceptions.py  models.py  schemas.py
appserver/libs/collections/: sort.py
appserver/libs/date_utils/: calendar.py
docs/: CALENDAR_USER_SCENARIOS.md  DATABASE_MIGRATION_BACKUP.md  DEPLOYMENT.md
tests/: conftest.py  test_hello.py
tests/appserver/apps/account/: test_login_api.py  test_logout_api.py  test_me_api.py  test_signup.py  test_signup_api.py  test_unregister_api.py  test_update_user_api.py
tests/appserver/apps/calendar/: test_booking_api.py  test_calendar.py  test_calendar_api.py  test_calendar_update_api.py  test_timeslot_api.py
tests/appserver/libs/datetime/: test_calendar.py
